prog not prog.exe

--- a/HW3/makefile
+++ b/HW3/makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -g -std=c99
 CCLINK = $(CC)
 OBJS   = main.o file0.o file1.o file2.o file3.o file4.o 
 EXEC =  prog
-RM = rm -fr $(OBJS) prog
+RM = rm -fr $(OBJS) prog *.exe
 
 
 $(EXEC): $(OBJS)
