--- a/HW4/makefile
+++ b/HW4/makefile
@@ -5,7 +5,7 @@ RM = rm -fr *.o libgrades.so
 
 
 libgrades.so: grades.o 
-	$(CCLINK) -shared grades.o -o -llinked-list -L.
+	$(CCLINK) -shared grades.o -o libgrades.so -llinked-list -L.
 	
 grades.o: grades.c linked-list.h
 			$(CC) $(CFLAGS) -c grades.c 
