--- a/HW4/makefile
+++ b/HW4/makefile
@@ -1,13 +1,35 @@
 CC     = gcc
-CFLAGS = -Wall -g -std=c99
+CFLAGS = -Wall -g -std=c99 
 CCLINK = $(CC)
 RM = rm -fr *.o libgrades.so
-
-
-libgrades.so: grades.o 
-	$(CCLINK) -shared grades.o -o libgrades.so -llinked-list -L.
+EXEC = prog1.exe
 	
-grades.o: grades.c linked-list.h
-			$(CC) $(CFLAGS) -c grades.c 
+
+	export LD_LIBRARY_PATH=/home/mamat/mamat_hw/HW4:$LD_LIBRARY_PATH
+
+	
+libgrades.so: grades.o 
+	$(CCLINK) -shared grades.o -o libgrades.so -L. -llinked-list
+	
+grades.o: grades.c linked-list.h 
+			$(CC) $(CFLAGS) -c grades.c -fPIC -llinked-list			
+
+	
+$(EXEC): libgrades.so
+	$(CCLINK) libgrades.so -o $(EXEC) -llinked-list -L/home/mamat/mamat_hw/HW4 -lgrades -L/home/mamat/mamat_hw/HW4
+
+	
 clean:
-	$(RM)
+	$(RM)		
+			
+	
+
+	
+
+
+
+	
+	
+	
+
+
