--- a/HW6/makefile
+++ b/HW6/makefile
@@ -1,17 +1,19 @@
 CXX = g++
-CXXFLAGS = -Wall -g -std=c+11 -L. -Wextra
+CXXFLAGS = -Wall -g -std=c++11 -L. -Wextra
 CCLINK = $(CXX)
 RM = rm -fr *.o firewall.exe firewall
-
-CPP_FILES = field_new.cpp ip_new.cpp port_new.cpp string_new.cpp
+NEW_LIB = firewall
+PROG = firewall.exe
+CPP_FILES = field_new.cpp ip_new.cpp port_new.cpp string_NEW.cpp
 MAIN = main_new.cpp
 
-firewall:	
-	$(CCLINK) $(CXXFLAGS) -fPIC -shared $(CPP_FILES) -o libfirewall.so
 
+all:$(PROG)
+$(NEW_LIB):	
+	$(CCLINK) $(CXXFLAGS) -fPIC -shared $(CPP_FILES) -o lib$(NEW_LIB).so
 
-firewall.exe: firewall
-	$(CCLINK) $(CXXFLAGS) $(MAIN) -o firewall.exe libfirewall.so -linput.so		
+$(PROG): $(NEW_LIB)
+	$(CCLINK) $(CXXFLAGS) $(MAIN) -o $(PROG) lib$(NEW_LIB).so -linput		
 
 	
 clean:
